[project]
name = "gov-health"
version = "0.2.0"
description = "Governance health analytics pipeline — Parquet-to-Parquet via DuckDB"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "pyarrow>=18.0",
    "click>=8.0",
    "tqdm>=4.0",
    "python-dotenv>=1.0",
]

[project.scripts]
gov-health = "gov_health.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
